k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: testapp-backend-service
                port:
                  number: 4040
          - path: /
            pathType: Prefix
            frontend:
              service:
                name: testapp-frontend-service
                port:
                  number: 3000
